--- a/css_syntax.css
+++ b/css_syntax.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   font-size: 38px;
+  margin-bottom: 10px;
 }
 
 h2 {
@@ -23,7 +24,90 @@ header > img {
   width: 100px;
 }
 
-ul li a {
+ul li a figcaption a{
   text-decoration: none;
   color: inherit;
+}
+
+.user_review h4 {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+input[type="radio"] {
+    -webkit-appearance: none;
+    width: 27px;
+    height: 27px;
+    background-image: url(stars.png);
+    vertical-align: bottom;
+}
+
+input[type="radio"]:checked {
+  background-position: 30px 30px;
+}
+
+
+input:last-child {
+    background: gold;
+}
+
+input:last-child:hover {
+    opacity: .7;
+}
+
+ol li:nth-of-type(2n) {
+  background-color: lightgrey;
+  margin: 10px 0;
+}
+
+h2 + .user_review {
+  border-top: 1px solid black;
+}
+
+nav {
+  float: right;
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a{
+  padding: 20px;
+  display: block;
+}
+
+body {
+    margin: 0 auto;
+    width: 60%;
+}
+
+aside {
+  display: inline-block;
+}
+
+.ingredients-list li {
+ margin: 15px 0px;
+}
+
+.directions-list li {
+  margin: 15px 0px;
+}
+
+input[type="text"], select {
+  display: block;
+  width: 175px;
+}
+
+select {
+  margin: 10px 0;
+  width: 180px;
+}
+
+textarea {
+  width: 350px;
+}
+
+label {
+  display: block;
 }
